resolve some errors

--- a/tomcat-redis-session-manager-8.5/build.gradle
+++ b/tomcat-redis-session-manager-8.5/build.gradle
@@ -94,7 +94,7 @@ uploadArchives {
           }
           developer {
             id 'lWoHvYe'
-            name ''
+            name '王红岩'
             url 'https://github.com/lWoHvYe'
           }
         }
